Remove Guides/Cryptonews/Recommended sections from homepage

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,11 +8,8 @@
             <div class="row align-items-center hero-top-row mb-4">
                 <div class="col-lg-9 d-flex flex-wrap align-items-center">
                     <div class="hero-chip-list">
-                        <span class="hero-chip hero-chip-active">Cryptonews</span>
-                        <a class="hero-chip" href="{{ "news" | relLangURL }}">All</a>
+                        <span class="hero-chip hero-chip-active">All</span>
                         <a class="hero-chip" href="{{ "news" | relLangURL }}">News</a>
-                        <a class="hero-chip" href="{{ "guides" | relLangURL }}">Guides</a>
-                        <a class="hero-chip" href="{{ "recommended" | relLangURL }}">Recommended</a>
                     </div>
                 </div>
                 <div class="col-lg-3 d-none d-lg-block">
