Add thumbnails to search results using custom index.json

--- a/layouts/_default/search.html
+++ b/layouts/_default/search.html
@@ -20,15 +20,24 @@
         <div id="search-results" class="search-results-list"></div>
         <script id="search-result-template" type="text/x-js-template">
           <div class="search-result-card" id="summary-${key}">
-            <div class="search-result-meta">
-              ${ isset categories }<span class="search-result-category">${categories}</span>${ end }
-              ${ isset tags }<span class="search-result-tags"> · ${tags}</span>${ end }
+            <div class="search-result-inner">
+              ${ isset image }
+              <div class="search-result-thumb">
+                <img src="${image}" alt="${title}">
+              </div>
+              ${ end }
+              <div class="search-result-content">
+                <div class="search-result-meta">
+                  ${ isset categories }<span class="search-result-category">${categories}</span>${ end }
+                  ${ isset tags }<span class="search-result-tags"> · ${tags}</span>${ end }
+                </div>
+                <h3 class="search-result-title">
+                  <a class="text-dark" href="${link}">${title}</a>
+                </h3>
+                <p class="search-result-snippet">${snippet}</p>
+                <a class="btn btn-transparent search-result-readmore" href="${link}">Continue...</a>
+              </div>
             </div>
-            <h3 class="search-result-title">
-              <a class="text-dark" href="${link}">${title}</a>
-            </h3>
-            <p class="search-result-snippet">${snippet}</p>
-            <a class="btn btn-transparent search-result-readmore" href="${link}">Continue...</a>
           </div>
         </script>
       </div>
