--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -40,7 +40,7 @@
     </div>
   </div>
   <div class="text-center pb-3">
-    <p class="mb-0">{{ site.Params.copyright | markdownify }}</p>
+    <p class="mb-0">© 2025 {{ site.Title }} All rights reserved.</p>
   </div>
 </footer>
 
@@ -99,4 +99,3 @@
 }
 </style>
 {{ end }}
-
