--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,9 +3,11 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3 col-sm-6 mb-4 mb-md-0">
+          {{ with site.Params.logo }}
           <a href="{{site.BaseURL}}">
-            {{ partial "image.html" (dict "Src" site.Params.logo "Alt" "Image" "Class" "img-fluid" ) }}
+            {{ partial "image.html" (dict "Src" . "Alt" "Image" "Class" "img-fluid" ) }}
           </a>
+          {{ end }}
         </div>
         <div class="col-md-3 col-sm-6 mb-4 mb-md-0">
           {{ if .Site.Params.address }}
