--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -10,6 +10,12 @@
   <meta name="theme-name" content="parsa-hugo" />
   {{ hugo.Generator }}
 
+  {{ "<!-- geo meta -->" | safeHTML }}
+  {{ with site.Params.geo.region }}<meta name="geo.region" content="{{ . }}">{{ end }}
+  {{ with site.Params.geo.placename }}<meta name="geo.placename" content="{{ . }}">{{ end }}
+  {{ with site.Params.geo.position }}<meta name="geo.position" content="{{ . }}">{{ end }}
+  {{ with site.Params.geo.position }}<meta name="ICBM" content="{{ . }}">{{ end }}
+
   {{ "<!-- plugins -->" | safeHTML }}
   {{ range site.Params.plugins.css }}
   <link rel="stylesheet" href="{{ .link | absURL }} ">
@@ -28,9 +34,38 @@
   <link rel="shortcut icon" href="{{ `images/favicon.png` | absURL }} " type="image/x-icon">
   <link rel="icon" href="{{ `images/favicon.png` | absURL }} " type="image/x-icon">
   
-  {{ with .Params.image }}
-  <meta property="og:image" content="{{ . | absURL }}" />
+  {{ "<!-- Open Graph / Twitter -->" | safeHTML }}
+  {{ $ogTitle := cond (ne .Title "") .Title site.Title }}
+  {{ $ogDesc := cond (ne .Description "") .Description site.Params.description }}
+  {{ $ogImage := .Params.image }}
+  {{ if not $ogImage }}
+    {{ with site.Params.og_image }}{{ $ogImage = . }}{{ end }}
   {{ end }}
+  {{ if not $ogImage }}
+    {{ with site.Params.default_image }}{{ $ogImage = . }}{{ end }}
+  {{ end }}
+
+  <meta property="og:site_name" content="{{ site.Title }}">
+  <meta property="og:title" content="{{ $ogTitle }}">
+  <meta property="og:description" content="{{ $ogDesc }}">
+  <meta property="og:type" content="{{ if .IsPage }}article{{ else }}website{{ end }}">
+  <meta property="og:url" content="{{ .Permalink }}">
+  {{ if $ogImage }}
+  <meta property="og:image" content="{{ $ogImage | absURL }}">
+  {{ end }}
+  {{ if .IsPage }}
+  <meta property="article:section" content="{{ .Section }}">
+  <meta property="article:published_time" content="{{ .PublishDate.Format "2006-01-02T15:04:05Z07:00" }}">
+  <meta property="article:modified_time" content="{{ .Lastmod.Format "2006-01-02T15:04:05Z07:00" }}">
+  {{ end }}
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="{{ $ogTitle }}">
+  <meta name="twitter:description" content="{{ $ogDesc }}">
+  {{ if $ogImage }}
+  <meta name="twitter:image" content="{{ $ogImage | absURL }}">
+  {{ end }}
+
   {{ template "_internal/opengraph.html" . }}
   {{ template "_internal/google_analytics.html" . }}
 
